--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -10,11 +10,14 @@ always_allow_html: true
 
 ```{r package-loading, message=FALSE}
 # Load packages
-library(tidyverse)  # Tidy code
-library(cowplot)    # Plots on a grid
-library(rgdal)      # Read shapefiles
-library(ggpubr)     # Deal with stats
-library(ggfortify)  # Plotting glm
+library(tidyverse)    # Tidy code
+library(cowplot)      # Plots on a grid
+library(raster)       # Data gridding
+library(rgdal)        # Read shapefiles
+library(ggpubr)       # Deal with stats
+library(ggfortify)    # Plotting glm
+library(RColorBrewer) # Diverging colour palettes
+library(cmocean)      # Oceanographic colour palettes
 # Custom figure theme
 theme_set(theme_bw())
 theme_update(axis.text = element_text(size = 9),
@@ -28,8 +31,6 @@ theme_update(axis.text = element_text(size = 9),
              plot.margin = unit(c(0.1, 0.1, 0.1, 0.1), "in"))
 options(dplyr.summarise.inform = F) # Suppress summarise() warning
 ```
-
-# Preparing data
 
 I want to test whether temperature and salinity at mesopelagic depth, sea-ice concentration, open-water duration (a proxy for productivity) have an effect on the backscatter anomalies observed per year. I therefore combined gridded acoustic data—integrated mesopelagic NASC—with gridded CTD, and remote sensing data projected on either the WGS84 or the EASE-Grid 2.0 North.
 
@@ -63,7 +64,9 @@ load("data/CTD/CTD_grids.RData") # CTD data
 load("data/remote_sensing/seaice_grids.RData") # Remote sensing sea ice data
 ```
 
-## EPSG:6931 - EASE-Grid 2.0 North
+# EPSG:6931 - EASE-Grid 2.0 North
+
+## Data preparation
 
 First I combine data using the EASE-Grid 2.0 North (EPSG:6931).
 
@@ -75,99 +78,204 @@ CTD_laea <- CTD_grid_laea %>% # Tidy CTD dataset for joining
 seaice_laea <- seaice_grid_laea %>% # Tidy sea ice dataset for joining
   dplyr::select(-lat, -lon)
 
-laea_SA_CTD_seaice <- left_join(SA_laea, seaice_laea, by = c("year", "area", "xc", "yc")) %>% # Join acoustic and seaice
+stat_laea <- left_join(SA_laea, seaice_laea, by = c("year", "area", "xc", "yc")) %>% # Join acoustic and seaice
   rowwise() %>%
+  # Replace missing values of seaice by the mean of cells within a 1 cell radius
   mutate(xc_na = if_else(is.na(mean_ice_conc) == T, xc, NaN),
          yc_na = if_else(is.na(mean_ice_conc) == T, yc, NaN),
          year_na = if_else(is.na(mean_ice_conc) == T, year, NaN), 
-         mean_ice_conc = if_else(is.na(mean_ice_conc) == T, mean(pull(subset(seaice_grid_laea,
-                                                                             xc >= xc_na - 200 &
-                                                                               xc <= xc_na + 200 & 
-                                                                               yc >= yc_na - 200 & 
-                                                                               yc <= yc_na + 200 & 
-                                                                               year == year_na,
-                                                                             select = mean_ice_conc),
-                                                                      mean_ice_conc),
-                                                                 na.rm = T),
+         mean_ice_conc = if_else(is.na(mean_ice_conc) == T, 
+                                 mean(pull(subset(seaice_grid_laea,
+                                                  xc >= xc_na - 100 & xc <= xc_na + 100 & 
+                                                    yc >= yc_na - 100 &  yc <= yc_na + 100 & 
+                                                    year == year_na,
+                                                  select = mean_ice_conc),
+                                           mean_ice_conc),
+                                      na.rm = T),
                                  mean_ice_conc),
-         openwater_duration = if_else(is.na(openwater_duration) == T, mean(pull(subset(seaice_grid_laea,
-                                                                                       xc >= xc_na - 200 &
-                                                                                         xc <= xc_na + 200 & 
-                                                                                         yc >= yc_na - 200 & 
-                                                                                         yc <= yc_na + 200 & 
-                                                                                         year == year_na,
-                                                                                       select = openwater_duration),
-                                                                                openwater_duration),
-                                                                           na.rm = T),
+         openwater_duration = if_else(is.na(openwater_duration) == T, 
+                                      mean(pull(subset(seaice_grid_laea,
+                                                       xc >= xc_na - 100 & xc <= xc_na + 100 & 
+                                                         yc >= yc_na - 100 &  yc <= yc_na + 100 & 
+                                                         year == year_na,
+                                                       select = openwater_duration),
+                                                openwater_duration),
+                                           na.rm = T),
                                       openwater_duration),
-         seaice_duration = if_else(is.na(seaice_duration) == T, mean(pull(subset(seaice_grid_laea,
-                                                                                 xc >= xc_na - 200 &
-                                                                                   xc <= xc_na + 200 & 
-                                                                                   yc >= yc_na - 200 & 
-                                                                                   yc <= yc_na + 200 & 
-                                                                                   year == year_na,
-                                                                                 select = seaice_duration),
-                                                                          seaice_duration),
-                                                                     na.rm = T),
+         seaice_duration = if_else(is.na(seaice_duration) == T, 
+                                   mean(pull(subset(seaice_grid_laea,
+                                                    xc >= xc_na - 100 & xc <= xc_na + 100 & 
+                                                      yc >= yc_na - 100 &  yc <= yc_na + 100 & 
+                                                      year == year_na,
+                                                    select = seaice_duration),
+                                             seaice_duration),
+                                        na.rm = T),
                                    seaice_duration)) %>%
-  dplyr::select(-xc_na, -yc_na, -year_na)
+  left_join(., CTD_laea, by = c("year", "area", "xc", "yc")) %>% # Join CTD data
+  dplyr::select(-xc_na, -yc_na, -year_na) %>%
+  # Replace missing values of temperature and salinity by the mean of cells within a 1 cell radius
+  mutate(xc_na = if_else(is.na(cons_temp) == T, xc, NaN),
+         yc_na = if_else(is.na(cons_temp) == T, yc, NaN),
+         year_na = if_else(is.na(cons_temp) == T, year, NaN), 
+         cons_temp = if_else(is.na(cons_temp) == T, 
+                             mean(pull(subset(CTD_grid_laea,
+                                              xc >= xc_na - 100 & xc <= xc_na + 100 & 
+                                                yc >= yc_na - 100 &  yc <= yc_na + 100 & 
+                                                year == year_na,
+                                              select = cons_temp),
+                                       cons_temp),
+                                  na.rm = T),
+                             cons_temp),
+         abs_sal = if_else(is.na(abs_sal) == T, 
+                           mean(pull(subset(CTD_grid_laea,
+                                            xc >= xc_na - 100 & xc <= xc_na + 100 & 
+                                              yc >= yc_na - 100 &  yc <= yc_na + 100 & 
+                                              year == year_na,
+                                            select = abs_sal),
+                                     abs_sal),
+                                na.rm = T),
+                           abs_sal)) %>%
+  dplyr::select(-xc_na, -yc_na, -year_na) %>%
+  # There's still a missing value in 2017 in the CAA; I replace that value by the mean of cells within a 2 cell radius
+  mutate(xc_na = if_else(is.na(cons_temp) == T, xc, NaN),
+         yc_na = if_else(is.na(cons_temp) == T, yc, NaN),
+         year_na = if_else(is.na(cons_temp) == T, year, NaN), 
+         cons_temp = if_else(is.na(cons_temp) == T, 
+                             mean(pull(subset(CTD_grid_laea,
+                                              xc >= xc_na - 200 & xc <= xc_na + 200 & 
+                                                yc >= yc_na - 200 &  yc <= yc_na + 200 & 
+                                                year == year_na,
+                                              select = cons_temp),
+                                       cons_temp),
+                                  na.rm = T),
+                             cons_temp),
+         abs_sal = if_else(is.na(abs_sal) == T, 
+                           mean(pull(subset(CTD_grid_laea,
+                                            xc >= xc_na - 200 & xc <= xc_na + 200 & 
+                                              yc >= yc_na - 200 &  yc <= yc_na + 200 & 
+                                              year == year_na,
+                                            select = abs_sal),
+                                     abs_sal),
+                                na.rm = T),
+                           abs_sal)) %>%
+  dplyr::select(-xc_na, -yc_na, -year_na) 
 ```
 
-**PROBLEM: Some cells do not have temperature and salinity data (red tiles). This needs to be fixed before modeling.**
+Maps of all variables.
 
-```{r map-missing-temp-sal, fig.align='center', fig.width=10}
-CTD_grid_laea %>%
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = mean_cons_temp), color = "grey30") +
-  scale_fill_viridis_c(na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  coord_fixed(xlim = c(-2700, 1300), ylim = c(-1900, 2000), expand = c(0, 0)) + 
-  theme(legend.position = "right")
+```{r map-all-var, fig.align='center', fig.width=7.5, fig.height=12}
+plot_grid(stat_laea %>% # Normalized backscatter anomaly
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_tile(aes(fill = NASC_anomaly_d), color = "grey30") +
+            scale_fill_manual("Anomaly sA", values = rev(brewer.pal(n = 5, name = "BrBG")), na.value = "red") +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
+          stat_laea %>% # Conservative temperature
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_tile(aes(fill = cons_temp), col = "grey30") +
+            scale_fill_cmocean("Temperature", name = "thermal", na.value = "red") +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
+          stat_laea %>% # Absolute salinity
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_tile(aes(fill = abs_sal), col = "grey30") +
+            scale_fill_cmocean("Salinity", name = "haline", na.value = "red") +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
+          stat_laea %>% # Open water duration
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_tile(aes(fill = openwater_duration), col = "grey30") +
+            scale_fill_viridis_c("Open water days", option = "cividis", na.value = "red") +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
+          stat_laea %>% # Ice concentration
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_tile(aes(fill = mean_ice_conc), col = "grey30") +
+            scale_fill_cmocean("Ice concentration", name = "ice", na.value = "red") +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
+          ncol = 1, align = "hv", axis = "tblr")
 ```
+
+## Data exploration
 
 ```{r scatterplots, message=FALSE, warning=FALSE, fig.align='center'}
-plot_grid(SA_CTD_seaice %>%
-            ggplot() +
-            geom_point(aes(x = cons_temp, y = anomaly_NASC_int, col = area)) +
+plot_grid(stat_laea %>%
+            ggplot(aes(x = cons_temp, y = NASC_anomaly, col = area)) +
+            geom_point(alpha = 0.5) +
+            stat_smooth(method = "lm", se = F) +
             scale_x_continuous("Temperature (°C)") +
-            scale_y_continuous("Sa anomaly") +
-            theme(plot.margin = margin(0.1, 0.1, 0.1, 0.1, unit = "in")),
-          SA_CTD_seaice %>%
-            ggplot() +
-            geom_point(aes(x = abs_sal, y = anomaly_NASC_int, col = area)) +
+            scale_y_continuous("Sa anomaly"),
+          stat_laea %>%
+            ggplot(aes(x = abs_sal, y = NASC_anomaly, col = area)) +
+            geom_point(alpha = 0.5) +
+            stat_smooth(method = "lm", se = F) +
             scale_x_continuous("Salinity (g/kg)") +
-            scale_y_continuous("Sa anomaly") +
-            theme(plot.margin = margin(0.1, 0.1, 0.1, 0.1, unit = "in")),
-          SA_CTD_seaice %>%
-            ggplot() +
-            geom_point(aes(x = mean_ice_conc, y = anomaly_NASC_int, col = area)) +
-            scale_x_continuous("Mean ice conc (%)") +
-            scale_y_continuous("Sa anomaly") +
-            theme(plot.margin = margin(0.1, 0.1, 0.1, 0.1, unit = "in")),
-          SA_CTD_seaice %>%
-            ggplot() +
-            geom_point(aes(x = openwater_duration, y = anomaly_NASC_int, col = area)) +
+            scale_y_continuous("Sa anomaly"),
+          stat_laea %>%
+            ggplot(aes(x = openwater_duration, y = NASC_anomaly, col = area)) +
+            geom_point(alpha = 0.5) +
+            stat_smooth(method = "lm", se = F) +
             scale_x_continuous("Open water (days)") +
-            scale_y_continuous("Sa anomaly") +
-            theme(plot.margin = margin(0.1, 0.1, 0.1, 0.1, unit = "in")),
+            scale_y_continuous("Sa anomaly"),
+          stat_laea %>%
+            ggplot(aes(x = mean_ice_conc, y = NASC_anomaly, col = area)) +
+            geom_point(alpha = 0.5) +
+            stat_smooth(method = "lm", se = F) +
+            scale_x_continuous("Mean ice conc (%)") +
+            scale_y_continuous("Sa anomaly"),
           ncol = 2, align = "hv", axis = "tblr")
 ```
 
-```{r data-distribution, fig.align='center', fig.height=2, fig.width=4}
-SA_CTD_seaice %>%
-  ggplot() + 
-  geom_histogram(aes(x = anomaly_NASC_int), binwidth = 0.1)
+The two cells with open water days > 200 and mean ice concentration < 25 % are from Svalbard in 2016. These are not outliers, the ice edge in Svalbard in 2016 was quite far north all year round.
+
+```{r sea-ice-2016-Sv, warning=FALSE}
+plot_grid(stat_laea %>% 
+            filter(year == 2016) %>%
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_tile(aes(fill = openwater_duration), col = "grey30") +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_text(aes(label = round(openwater_duration)), col = "red") +
+            scale_fill_viridis_c("Open water days", option = "cividis", limits = c(0,365)) +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(100, 500), ylim = c(-1300, -800), expand = F) +
+            theme(legend.position = "none"),
+          seaice_grid_laea %>% 
+            filter(year == 2016) %>%
+            ggplot(aes(x = xc,  y = yc)) +
+            geom_tile(aes(fill = openwater_duration), col = "grey30") +
+            geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+            geom_text(aes(label = round(openwater_duration)), col = "red") +
+            scale_fill_viridis_c("Open water days", option = "cividis", limits = c(0,365)) +
+            facet_wrap(~ year, ncol = 3) +
+            coord_fixed(xlim = c(100, 500), ylim = c(-1300, -800), expand = F) +
+            theme(legend.position = "none"),
+          ncol = 2)
 ```
 
-Data does not look very normal. The mean and variance of normalized backscatter anomalies are `r c(round(mean(SA_anomaly_2deg$anomaly_NASC_int), 3), round(var(SA_anomaly_2deg$anomaly_NASC_int), 3))`, respectively.
+Data does not look very normal. The mean and variance of normalized backscatter anomalies are `r c(round(mean(stat_laea$NASC_anomaly), 3), round(var(stat_laea$NASC_anomaly), 3))`, respectively.
+
+```{r data-distribution}
+stat_laea %>%
+  ggplot() + 
+  geom_histogram(aes(x = NASC_anomaly), binwidth = 0.1)
+```
+Gaussian linear regression.
 
 ```{r gaussian-lm, fig.align='center'}
 # Gaussian linear model
-lm_gaussian <- glm(anomaly_NASC_int ~ cons_temp + abs_sal + mean_ice_conc + openwater_duration, 
-                   data = SA_CTD_seaice,
-                   family = gaussian(link = "identity"))
+lm_gaussian <- lm(NASC_anomaly ~ cons_temp + abs_sal + mean_ice_conc + openwater_duration, 
+                  data = stat_laea)
 summary(lm_gaussian)
-autoplot(lm_gaussian) 
+autoplot(lm_gaussian)
 ```
-
