Updated grid resolution for CTD and remote sensing products.

--- a/PanArctic_DSL_CTD.Rmd
+++ b/PanArctic_DSL_CTD.Rmd
@@ -32,7 +32,7 @@ options(dplyr.summarise.inform = F) # Suppress summarise() warning
 
 # CTD data
 
-CTD data were collected regularly during each of the survey. To match CTD records with acoustic data, I rasterized CTD data on the same grid as the acoustic data. I tried two different grids; the WGS84 projection (EPSG:4326) with grid cells of 2°lon * 1°lat, and the EASE-Grid 2.0 North (EPSG:6931) with grid cells of 100 km * 100 km which is the default grid for sea-ice data. For each cell I calculated the mean conservative temperature and absolute salinity between 200 and 1000 m depth.
+CTD data were collected regularly during each of the survey. To match CTD records with acoustic data, I rasterized CTD data on the same grid as the acoustic data. I tried two different grids; the WGS84 projection (EPSG:4326) with grid cells of 2°lon * 1°lat, and the EASE-Grid 2.0 North (EPSG:6931) with grid cells of 150 km * 150 km. For each cell I calculated the mean conservative temperature and absolute salinity between 200 and 1000 m depth.
 
 ```{r data-loading, message=FALSE}
 load("data/CTD/CTD_2015_2019.RData") # CTD data
@@ -81,7 +81,7 @@ rm(CTD_tmp, CTD_tmp_latlon, i) # Remove temporary data
 
 Plot mean conservative temperature and absolute salinity over mesopelagic depths (200 - 1000 m depth) with the WGS84 projection.
 
-```{r EPSG-4326-map-CTD, message=FALSE, warning=FALSE, fig.width=10, fig.height=6}
+```{r EPSG-4326-map-CTD, message=FALSE, fig.width=10, fig.height=6}
 coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in latlon
   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
@@ -94,7 +94,7 @@ plot_grid(CTD_grid_latlon %>% # Map conservative temperature
             geom_tile(aes(x = lon, y = lat, fill = cons_temp)) +
             scale_fill_cmocean("EPSG:4326 - Mesopelagic cons. temp. (°C)", name = "thermal") +
             facet_wrap(~ year, ncol = 1) +
-            coord_cartesian(xlim = c(-155, 40), ylim = c(65, 85), expand = c(0, 0))  +
+            coord_cartesian(xlim = c(-155, 40), ylim = c(65, 85), expand = F)  +
             theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in")),
           CTD_grid_latlon %>% # Map absolute salinity
             ggplot() +
@@ -102,7 +102,7 @@ plot_grid(CTD_grid_latlon %>% # Map conservative temperature
             geom_tile(aes(x = lon, y = lat, fill = abs_sal)) +
             scale_fill_cmocean("EPSG:4326 - Mesopelagic abs. sal. (g/kg)", name = "haline") +
             facet_wrap(~ year, ncol = 1) +
-            coord_cartesian(xlim = c(-155, 40), ylim = c(65, 85), expand = c(0, 0))  +
+            coord_cartesian(xlim = c(-155, 40), ylim = c(65, 85), expand = F)  +
             theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in")),
           ncol = 2, align = "hv", axis = "tblr")
 ```
@@ -112,7 +112,7 @@ plot_grid(CTD_grid_latlon %>% # Map conservative temperature
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
 
 ```{r EPSG-6931-CTD-grid}
-cell_res <- 100 # Cell resolution in km
+cell_res <- 150 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -153,7 +153,7 @@ rm(CTD_tmp, CTD_tmp_laea, i, cell_res) # Remove temporary data
 
 Plot mean conservative temperature and absolute salinity over mesopelagic depths (200 - 1000 m depth) with the EASE-Grid 2.0 North. 
 
-```{r EPSG-6931-map-CTD, message=FALSE, warning=FALSE, fig.width=8, fig.height=7}
+```{r EPSG-6931-map-CTD, message=FALSE, fig.width=8, fig.height=7}
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
@@ -167,16 +167,18 @@ plot_grid(CTD_grid_laea %>% # Map conservative temperature
             geom_tile(aes(x = xc, y = yc, fill = cons_temp)) +
             scale_fill_cmocean("EPSG:6931 - Mesopelagic cons. temp. (°C)", name = "thermal") +
             facet_wrap(~ year, ncol = 3) +
-            coord_fixed(xlim = c(-2700, 1300), ylim = c(-1900, 2000), expand = c(0, 0)) +
-            theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in")),
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in"),
+                  axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
           CTD_grid_laea %>% # Map absolute salinity
             ggplot() +
             geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
             geom_tile(aes(x = xc, y = yc, fill = abs_sal)) +
             scale_fill_cmocean("EPSG:6931 - Mesopelagic abs. sal. (g/kg)", name = "haline") +
             facet_wrap(~ year, ncol = 3) +
-            coord_fixed(xlim = c(-2700, 1300), ylim = c(-1900, 2000), expand = c(0, 0)) +
-            theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in")),
+            coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+            theme(legend.position = "top", legend.key.height = unit(0.1, "in"), legend.key.width = unit(0.3, "in"),
+                  axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank()),
           ncol = 1, align = "hv", axis = "tblr")
 ```
 
